# mp3edit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: bytes.h  directory.cc  directory.h  file.cc  file.h  files.cc  files.h  filesystem.cc  filesystem.h  main.cc  main.h.in  sanitiser.cc  sanitiser.h
src/gui/: error_dialog.cc  error_dialog.h  treeview_files.cc  treeview_files.h  window_main.cc  window_main.h
src/reader/: utility.cc  utility.h
src/reader/audio/: mp3.cc  mp3.h  ogg.cc  ogg.h
src/reader/tag/: ape.cc  ape.h  id3v1.cc  id3v1.h  id3v2.cc  id3v2.h  id3v2_3.cc  id3v2_3.h  lyrics3.cc  lyrics3.h  mp3_padding.cc  mp3_padding.h  vorbis.cc  vorbis.h  vorbis_flac.cc  vorbis_flac.h  vorbis_ogg.cc  vorbis_ogg.h  vorbis_shared.cc  vorbis_shared.h
src/webservice/: musicbrainz.cc  musicbrainz.h  wikipedia.cc  wikipedia.h
